# human-rail

./: .dockerignore  .env.example  .env.product.example  .gitignore  .replit  Anchor.toml  Anchor.toml.bak  BASELINE_REPORT.md  CHANGELOG.md  Cargo.toml.bak  Dockerfile.api  Dockerfile.worker  Dockerfile.worker.devnet  INVESTOR_DEMO.md  LICENSE  PHASE1_FROZEN.md  README.md  SECURITY.md  SECURITY_AUDIT.md  agent-vault-kimi-prompt.md  agent-vault-wiring-prompt.md  data_blink.json  docker-compose.beta.yml  docker-compose.yml  grant-submission-integration.md  humanrail-sdk-agent-prompt.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  video theme
.github/workflows/: ci.yml  devnet-smoke.yml  mandara-product-ci.yml
.keys/: delegation-keypair.json  human_pay-keypair.json  receipts-keypair.json
app/: error.tsx  globals.css  layout.tsx  page-client.tsx  page.tsx
app/advanced/: page.tsx
app/agent/: page-client.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/delegation/: page.tsx
app/human/: page-client.tsx  page.tsx
app/mandara/: page.tsx
app/receipts/: page.tsx
app/vault/: error.tsx  layout.tsx  loading.tsx  page-client.tsx  page.tsx
apps/api/: package.json  start.sh
apps/web-demo/: README.md  package.json
apps/worker/: package.json
components/: error-boundary.tsx
components/dashboard/: header.tsx  sidebar.tsx
components/issuer/: issuer-card.tsx  issuers-section.tsx
components/layout/: navbar.tsx
components/mandara/: agent-action-proposal-card.tsx  agent-chat-message-list.tsx  agent-chat.tsx  agent-connection-guide.tsx  app-shell.tsx  console-dashboard.tsx  help-tip.tsx  landing-page.tsx  onboarding-wizard.tsx  subscription-usage-card.tsx
docs/: API_EXAMPLES.md  BETA_LAUNCH_CHECKLIST.md  CUSTOMER_DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEVELOPER_ONBOARDING.md  DWALLET_GUARD_PROGRAM.md  FINAL_AUDIT.md  GRANT_IKA_SUBMISSION_PLAN.md  GRANT_SUBMISSION.md  IKA_INTEGRATION_RUNBOOK.md  IKA_TECHNICAL_NOTES.md  INVESTOR_DEMO_SCRIPT.md  JUDGING_CRITERIA.md  LANDING_PAGE_COPY.md  MANDARA_INVESTOR_DEMO_VIDEO_PLAN.md  MANDARA_SDK.md  PRICING_HYPOTHESIS.md  PRODUCT_AGENT_API.md  PRODUCT_AGENT_CHAT.md  PRODUCT_API_DESIGN.md  PRODUCT_ARCHITECTURE.md  PRODUCT_ARTIFACT_IMPORT.md  PRODUCT_AUDIT_EXPORTS.md  PRODUCT_DASHBOARD.md  PRODUCT_DATABASE_MODEL.md  PRODUCT_DEPLOYMENT.md  PRODUCT_FINAL_AUDIT.md  PRODUCT_FRONTEND_REBUILD.md  PRODUCT_IMPLEMENTATION_PLAN.md  PRODUCT_LAUNCH_PACKAGE.md  PRODUCT_LIVE_EXECUTION.md  PRODUCT_LIVE_EXECUTION_PROOF.md  PRODUCT_LOCAL_SETUP.md  PRODUCT_OPERATIONS_RUNBOOK.md  PRODUCT_SUBSCRIPTIONS.md  PRODUCT_WEBHOOKS.md  PRODUCT_WORKER.md  README.md  ROADMAP.md  dWallet_Developer_Guide-IKA.md  (+3 more)
lib/: providers.tsx
lib/ika/: pda.ts  (+5 more)
programs/agent_registry/: Cargo.toml
programs/agent_registry/src/: error.rs  lib.rs  state.rs
programs/agent_registry/src/instructions/: mod.rs  reactivate_agent.rs  register_agent.rs  revoke_agent.rs  rotate_agent_key.rs  suspend_agent.rs  update_agent_metadata.rs  verify_agent.rs
programs/data_blink/: Cargo.toml
programs/data_blink/src/: error.rs  lib.rs  state.rs  utils.rs
programs/data_blink/src/instructions/: agent_submit_response.rs  claim_rewards.rs  close_task.rs  create_task.rs  mod.rs  submit_response.rs
programs/document_registry/: Cargo.toml
programs/document_registry/src/: error.rs  lib.rs  state.rs
programs/document_registry/src/instructions/: add_required_signer.rs  anchor_offchain_signature.rs  emit_to_receipts.rs  finalize_document.rs  mod.rs  register_document.rs  revoke_signature.rs  sign_document_agent.rs  sign_document_agent_autonomous.rs  sign_document_tx.rs  sign_document_verified.rs  sign_document_verified.rs.bak  verify_document_complete.rs  void_document.rs
programs/human_pay/: Cargo.toml
programs/human_pay/src/: error.rs  lib.rs  state.rs  utils.rs
programs/human_pay/src/instructions/: agent_pay_invoice.rs  cancel_invoice.rs  create_invoice.rs  fund_agent_escrow.rs  mod.rs  pay_invoice.rs  withdraw_invoice.rs
programs/human_registry/: Cargo.toml
programs/human_registry/src/: attestation_index.rs  error.rs  lib.rs  state.rs  state_v2.rs  utils.rs
programs/human_registry/src/instructions/: assert_unique.rs  init_profile.rs  init_registry.rs  issue_attestation.rs  mod.rs  recompute_score.rs  register_attestation.rs  register_issuer.rs  revoke_attestation_v2.rs  verify_human.rs
programs/humanrail-dwallet-guard/: Cargo.toml
programs/humanrail-dwallet-guard/src/: error.rs  ika_cpi.rs  lib.rs  state.rs
programs/humanrail-dwallet-guard/src/instructions/: approve.rs  freeze.rs  initialize.rs  initialize_demo.rs  mod.rs  unfreeze.rs
programs/receipts/: Cargo.toml
programs/receipts/src/: error.rs  lib.rs  state.rs
programs/receipts/src/instructions/: batch_emit.rs  emit_receipt.rs  mod.rs  verify_receipt.rs
scripts/: check-dwallet-guard.sh  check-enum-drift.sh  check-no-test-features.sh  check-program-id-drift.sh  check-program-ids.sh  check_program_ids.py  clean-dev-disk.sh  create-dev-agent-api-key.mjs  demo.ts  deploy-dwallet-guard.sh  devnet-create-guarded-dwallet.ts  devnet-inspect-ika.ts  export-program-ids-localnet.sh  final-submission-check.sh  ika-approve-guarded-message.ts  ika-create-dwallet.sh  ika-transfer-authority.ts  ika-verify-lifecycle.ts  mandara-sdk-smoke.ts  product-agent-api-smoke.mjs  product-agent-chat-llm-smoke.mjs  product-agent-chat-smoke.mjs  product-api-smoke.mjs  product-backfill-webhook-secrets.ts  product-ci-check.sh  product-dashboard-smoke.mjs  product-frontend-smoke.mjs  product-import-devnet-artifacts.ts  product-launch-check.sh  product-live-smoke.mjs  product-readiness-check.sh  product-webhook-smoke.mjs  product-worker-live-direct.ts  product-worker-smoke.mjs  register-veriff-issuer.ts  test-agent-cross-chain-tool.ts  test-direct-ika.ts  test-ika-parsers.ts  verify-dwallet-guard-deploy.sh
tests/: core-v1-integration.ts  devnet-smoke-ed25519.ts  freeze-security.test.ts  humanrail.ts
tools/ika-dkg-cli/: Cargo.toml
tools/ika-dkg-cli/src/: config.rs  dkg.rs  main.rs  output.rs  sign.rs
(+210 files in other folders)
