[package]
name = "agent-registry"
version = "0.1.0"
description = "Agent identity registry with lifecycle management for HumanRail KYA"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
human-registry = { path = "../human_registry", features = ["cpi"] }
