[package]
name = "data-blink"
version = "0.1.0"
description = "RLHF micro-task and human work rail for HumanRail"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_blink"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
human-registry = { path = "../human_registry", features = ["cpi"] }
delegation = { path = "../delegation", features = ["cpi"] }
agent-registry = { path = "../agent_registry", features = ["cpi"] }
