[package]
name = "human-pay"
version = "0.1.0"
description = "Confidential payment and invoice rail for HumanRail"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "human_pay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# This is what Anchor is complaining about
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
human-registry = { path = "../human_registry", features = ["cpi"] }
