[package]
name = "human-registry"
version = "0.1.0"
description = "Human identity and proof of personhood registry for HumanRail"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "human_registry"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Silence Rust check-cfg warnings
anchor-debug = []
custom-heap = []
custom-panic = []
# ⚠️  TEST ONLY — never deploy with this enabled!
test-skip-sig-verify = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
