[package]
name = "humanrail-dwallet-guard"
version = "0.1.0"
description = "HumanRail dWallet Guard — policy controller for Ika cross-chain signing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "humanrail_dwallet_guard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "1"
ika-dwallet-anchor = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
