[package]
name = "receipts"
version = "0.1.0"
description = "Unified action receipts for accountability and audit trails - HumanRail KYA"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
