[package]
name = "receipts"
version = "0.1.0"
description = "Unified action receipts for accountability and audit trails - HumanRail KYA"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
delegation = { path = "../delegation", features = ["cpi"] }
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
agent-registry = { path = "../agent_registry", features = ["cpi"] }
