[package]
name = "ika-dkg-cli"
version = "0.1.0"
edition = "2021"
description = "HumanRail Ika dWallet DKG CLI — create real Ika dWallets on devnet via gRPC"
license = "BSD-3-Clause-Clear"
publish = false

[[bin]]
name = "ika-dkg-cli"
path = "src/main.rs"

[dependencies]
# Ika official crates (same git rev as humanrail-dwallet-guard)
ika-grpc = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }
ika-dwallet-types = { git = "https://github.com/dwallet-labs/ika-pre-alpha" }

# Solana
solana-sdk = "2.2"
solana-rpc-client = "2.2"

# Async / gRPC
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }

# Serialization
bcs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI / utils
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"
chrono = "0.4"

# Crypto (for real Ed25519 signatures)
ed25519-dalek = "2"
